<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".Main_Page">

    <ImageView
        android:id="@+id/userAccountImageView"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="28dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/user_acc_icon" />

    <TextView
        android:id="@+id/mainPage_UserWelcomeTV"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="25dp"
        android:fontFamily="@font/jost"
        android:text="Hello, Matrix!"
        android:textColor="@color/white"
        android:textSize="39sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userAccountImageView" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginTop="20dp"
        android:text="Select your current education"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mainPage_UserWelcomeTV" />

    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="0dp"
        android:layout_height="127dp"
        android:layout_marginStart="35dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView9">

        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <androidx.cardview.widget.CardView
                    android:layout_width="127dp"
                    android:layout_height="match_parent"
                    android:layout_marginRight="20dp"
                    app:cardBackgroundColor="@color/white"
                    app:cardCornerRadius="20dp"
                    app:cardElevation="10dp">

                    <TextView
                        android:id="@+id/class10TV"
                        android:onClick="currentEducationOnClick"
                        android:tag="10"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:fontFamily="@font/jost"
                        android:gravity="center"
                        android:text="10th"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="38sp"
                        android:textStyle="bold" />
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="127dp"
                    android:layout_height="match_parent"
                    android:layout_marginRight="20dp"
                    app:cardBackgroundColor="@color/white"
                    app:cardCornerRadius="20dp"
                    app:cardElevation="10dp">

                    <TextView
                        android:id="@+id/class12TV"
                        android:onClick="currentEducationOnClick"
                        android:tag="12"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:fontFamily="@font/jost"
                        android:gravity="center"
                        android:text="12th"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="38sp"
                        android:textStyle="bold" />
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="133dp"
                    android:layout_height="match_parent"
                    android:layout_marginRight="20dp"
                    app:cardBackgroundColor="@color/white"
                    app:cardCornerRadius="20dp"
                    app:cardElevation="10dp">

                    <TextView
                        android:id="@+id/diplomaTV"
                        android:onClick="currentEducationOnClick"
                        android:tag="13"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:fontFamily="@font/jost"
                        android:gravity="center"
                        android:text="Diploma"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="30sp"
                        android:textStyle="bold" />
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="140dp"
                    android:layout_height="match_parent"
                    app:cardBackgroundColor="@color/white"
                    app:cardCornerRadius="20dp"
                    android:layout_marginRight="20dp"
                    app:cardElevation="10dp">

                    <TextView
                        android:id="@+id/universityTV"
                        android:onClick="currentEducationOnClick"
                        android:tag="14"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:fontFamily="@font/jost"
                        android:gravity="center"
                        android:text="University"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="26sp"
                        android:textStyle="bold" />
                </androidx.cardview.widget.CardView>

            </LinearLayout>

        </HorizontalScrollView>

    </LinearLayout>

    <TextView
        android:id="@+id/textView10"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:fontFamily="@font/jost"
        android:text="Following CareerPaths for your selected education:"
        android:textColor="@color/white"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout5" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="42dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="42dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constrainedWidth="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView10">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical" >

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    app:cardBackgroundColor="@color/white"
                    app:cardCornerRadius="20dp">

                    <TextView
                        android:id="@+id/science_CPathTV"
                        android:tag="scienceCPath"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/jost"
                        android:paddingLeft="13dp"
                        android:paddingTop="6dp"
                        android:paddingBottom="6dp"
                        android:onClick="careerPathSelected"
                        android:text="@string/science_text"
                        android:textColor="@color/black"
                        android:textSize="15sp" />
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardBackgroundColor="@color/white"
                    android:layout_marginBottom="10dp"
                    app:cardCornerRadius="20dp">
                    <TextView
                        android:id="@+id/commerce_CPathTV"
                        android:tag="commerceCPath"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="13dp"
                        android:paddingBottom="6dp"
                        android:paddingTop="6dp"
                        android:textSize="15sp"
                        android:textColor="@color/black"
                        android:fontFamily="@font/jost"
                        android:text="@string/commerce_text"                        />
                </androidx.cardview.widget.CardView>
                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardBackgroundColor="@color/white"
                    android:layout_marginBottom="10dp"
                    app:cardCornerRadius="20dp">
                    <TextView
                        android:id="@+id/artHum_CPathTV"
                        android:tag="artHumCPath"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="13dp"
                        android:paddingBottom="6dp"
                        android:paddingTop="6dp"
                        android:textSize="15sp"
                        android:textColor="@color/black"
                        android:fontFamily="@font/jost"
                        android:text="@string/arts_humanities_text"                        />
                </androidx.cardview.widget.CardView>
                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardBackgroundColor="@color/white"
                    android:layout_marginBottom="10dp"
                    app:cardCornerRadius="20dp">
                    <TextView
                        android:id="@+id/iti_CPathTV"
                        android:tag="itiCPath"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="13dp"
                        android:paddingBottom="6dp"
                        android:paddingTop="6dp"
                        android:textSize="15sp"
                        android:textColor="@color/black"
                        android:fontFamily="@font/jost"
                        android:text="@string/iti_text"                        />
                </androidx.cardview.widget.CardView>
                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardBackgroundColor="@color/white"
                    android:layout_marginBottom="10dp"
                    app:cardCornerRadius="20dp">
                    <TextView
                        android:id="@+id/poly_CPathTV"
                        android:tag="polyCPath"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="13dp"
                        android:paddingBottom="6dp"
                        android:paddingTop="6dp"
                        android:textSize="15sp"
                        android:textColor="@color/black"
                        android:fontFamily="@font/jost"
                        android:text="@string/poly_text"                        />
                </androidx.cardview.widget.CardView>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>